updated title in HTML

--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Cool Project</title>
+    <title>Darts of Destrcution</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <h1>Darts of Destruction</h1>
     </div>
     <script src="js/bundle.js"></script>
   </body>
