installed Bootstrap --save

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Darts of Destruction</h1>
+      <nav>
+        <img src="http://placehold.it/100x100">
+        <h1>Darts of Destruction</h1>
+
+      </nav>
     </div>
     <script src="js/bundle.js"></script>
   </body>
