--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,45 @@
   </head>
   <body>
     <div class="container">
-      <nav>
-        <img src="http://placehold.it/100x100">
-        <h1>Darts of Destruction</h1>
+      <main>
+        <nav>
+          <img src="http://placehold.it/100x100">
+          <h1>Darts of Destruction</h1>
+        </nav>
+        <div class="carousel">
 
-      </nav>
+        </div>
+        <div class="shoppingCart">
+
+        </div>
+      </main>
+      <section class="testimonialsOuter">
+        <div class="testimonialsInner">
+          <h2>Testimonials</h2>
+          <div class="">
+            <h5>Name</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+          </div>
+        </div>
+      </section>
+      <section class="productOuter">
+        <div class="productInner">
+          <img src="http://placehold.it/200x200">
+          <img src="http://placehold.it/200x200">
+          <img src="http://placehold.it/200x200">
+          <img src="http://placehold.it/200x200">
+        </div>
+      </section>
+      <section class="map">
+        <img src="http://placehold.it/1000x350">
+      </section>
+      <footer>
+      <p>
+        First you buy, they put a blidfold on, and throw the dart very very high... & wait!
+      </p>
+    </footer>
+
+
     </div>
     <script src="js/bundle.js"></script>
   </body>
