--- a/app/index.html
+++ b/app/index.html
@@ -72,47 +72,48 @@
 
 
 
-    <div class="container">
-      <main>
-        <nav>
-          <img src="http://placehold.it/100x100">
-          <h1>Darts of Destruction</h1>
-        </nav>
-        <div class="carousel">
+    <main>
+      <nav>
+        <img src="http://placehold.it/100x100">
+        <h1>Darts of Destruction</h1>
+      </nav>
+      <div class="carousel">
 
-        </div>
-        <div class="shoppingCart">
+      </div>
+      <div class="shoppingCart">
 
+      </div>
+    </main>
+
+    <section class="testimonialsOuter">
+      <div class="testimonialsInner">
+        <h2>Testimonials</h2>
+        <div class="">
+          <h5>Name</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
         </div>
-      </main>
-      <section class="testimonialsOuter">
-        <div class="testimonialsInner">
-          <h2>Testimonials</h2>
-          <div class="">
-            <h5>Name</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-          </div>
-        </div>
-      </section>
-      <section class="productOuter">
-        <div class="productInner">
-          <img src="http://placehold.it/100x100">
-          <img src="http://placehold.it/100x100">
-          <img src="http://placehold.it/100x100">
-          <img src="http://placehold.it/100x100">
-        </div>
-      </section>
-      <section class="map">
-        <img src="http://placehold.it/800x250">
-      </section>
-      <footer>
+      </div>
+    </section>
+
+    <section class="productOuter">
+      <div class="productInner">
+        <img src="http://placehold.it/100x100">
+        <img src="http://placehold.it/100x100">
+        <img src="http://placehold.it/100x100">
+        <img src="http://placehold.it/100x100">
+      </div>
+    </section>
+
+    <section class="container-fluid">
+      <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
+    </section>
+    <footer>
       <p>
         First you buy, they put a blidfold on, and throw the dart very very high... & wait!
       </p>
     </footer>
 
 
-    </div>
     <script src="js/bundle.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
