--- a/app/index.html
+++ b/app/index.html
@@ -33,25 +33,41 @@
 
     <section class="testimonialsOuter container-fluid">
       <div class="testimonialsInner container">
-        <h2>Testimonials</h2>
-        <div class="">
-          <h5>Name</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+        <div class="row">
+          <h2>Testimonials</h2>
+          <div class="">
+            <h5>Name</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="productOuter container-fluid">
       <div class="productInner container">
-        <img src="http://placehold.it/100x100">
-        <img src="http://placehold.it/100x100">
-        <img src="http://placehold.it/100x100">
-        <img src="http://placehold.it/100x100">
+        <div class="row">
+
+          <div class="col-sm-3 text-center">
+            <img src="http://placehold.it/100x100">
+          </div>
+          <div class="col-sm-3 text-center">
+            <img src="http://placehold.it/100x100">
+          </div>
+          <div class="col-sm-3 text-center">
+            <img src="http://placehold.it/100x100">
+          </div>
+          <div class="col-sm-3 text-center">
+            <img src="http://placehold.it/100x100">
+          </div>
+
+        </div>
       </div>
     </section>
 
     <section class="container-fluid">
-      <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
+      <div class="row">
+        <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
+      </div>
     </section>
     <footer>
       <p>
