working on google mapscorll feature.

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <section class="container-fluid">
-      <div class="row" class="overlay" onclick="style.pointerEvents= 'none'">
+      <div class="row" class="map" id="canvas1">
         <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
       </div>
     </section>
