working on html + css for carousel

--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,22 @@
       </div>
 
       <div class="container">
-        <div class="row">
-          <div class="carousel">
-
+        <div class="row carousel-row">
+          <div id="carousel" class="col-sm-7">
+            <div class="prev">
+              <a href="">&lt;</a>
+            </div>
+            <ul>
+              <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
+              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
+              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
+            </ul>
+            <div class="next">
+              <a href="">&gt;</a>
+            </div>
           </div>
-          <div class="shoppingCart">
-
+          <div class="shoppingCart col-sm-5">
+            shopping cart
           </div>
         </div>
       </div>
