--- a/app/index.html
+++ b/app/index.html
@@ -43,12 +43,13 @@
 
     <section class="testimonialsOuter container-fluid">
       <div class="testimonialsInner container">
-        <div class="row">
+        <div class="row text-center">
           <h2>Testimonials</h2>
-          <div class="">
-            <h5>Name</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-          </div>
+        </div>
+        <div class="row testimonials-row">
+
+        </div>
+
         </div>
       </div>
     </section>
