success on creating new object with user reviews and gender matching images

--- a/app/index.html
+++ b/app/index.html
@@ -9,37 +9,35 @@
   </head>
   <body>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img class="logo img-responsive" src="./images/darts-logo.png">
-            <h1 class="brandname">Darts of Destruction</h1>
-        </div>
-        </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="logo img-responsive" src="./images/darts-logo.png">
+          <h1 class="brandname">Darts of Destruction</h1>
       </div>
+      </div>
+    </div>
 
-      <div class="container">
-        <div class="row carousel-row">
-          <div id="carousel" class="col-sm-7">
-            <div class="prev">
-              <a href="">&lt;</a>
-            </div>
-            <ul>
-              <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
-              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
-              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
-            </ul>
-            <div class="next">
-              <a href="">&gt;</a>
-            </div>
+    <section class="container carouselCart">
+      <div class="row carousel-row">
+        <div id="carousel" class="col-sm-7">
+          <div class="prev">
+            <a href="">&lt;</a>
           </div>
-          <div class="shoppingCart col-sm-5">
-            shopping cart
+          <ul>
+            <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
+            <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
+            <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
+          </ul>
+          <div class="next">
+            <a href="">&gt;</a>
           </div>
         </div>
+        <div class="shoppingCart col-sm-5">
+          shopping cart
+        </div>
       </div>
-
-
+    </section>
 
     <section class="testimonialsOuter container-fluid">
       <div class="testimonialsInner container">
