--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -18,26 +19,35 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="row carousel-row">
-          <div id="carousel" class="col-sm-7">
-            <div class="prev">
-              <a href="">&lt;</a>
-            </div>
-            <ul>
-              <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
-              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
-              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
-            </ul>
-            <div class="next">
-              <a href="">&gt;</a>
-            </div>
-          </div>
-          <div class="shoppingCart col-sm-5">
-            shopping cart
-          </div>
-        </div>
-      </div>
+      <section class="container carouselCart">
+         <div class="row carousel-row">
+           <div id="carousel" class="col-sm-7">
+             <div class="prev">
+               <a href="">&lt;</a>
+             </div>
+             <ul>
+               <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
+               <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
+               <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
+             </ul>
+             <div class="next">
+               <a href="">&gt;</a>
+             </div>
+           </div>
+           <div class="shoppingCart col-sm-5">
+             <h4>Product Title Goes Here</h4>
+             <p class="productDescription">Description goes here.</p>
+             <div class="addToCartandIcons">
+               <button type="button" name="button">Add To Cart</button>
+               <ul>
+                 <i class="fa fa-snapchat" aria-hidden="true"></i>
+                 <i class="fa fa-twitter" aria-hidden="true"></i>
+                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
+               </ul>
+             </div>
+           </div>
+         </div>
+      </section>
 
 
 
