--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,9 @@
              </div>
            </div>
            <div class="shoppingCart col-sm-5">
-             <h4>Product Title Goes Here</h4>
-             <p class="productDescription">Description goes here.</p>
+             <div class="productDetails">
+               <!-- product.js template goes here -->
+             </div>
              <div class="addToCartandIcons">
                <button type="button" name="button">Add To Cart</button>
                <ul>
