changes to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
     <section class="productOuter container-fluid">
       <div class="productInner container">
         <div class="row">
-
+          <h2>Companies Who Use Our Product</h2>
           <div class="col-sm-3 text-center">
             <img src="http://placehold.it/100x100">
           </div>
