--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-md-6">
           <img class="logo img-responsive" src="./images/darts-logo.png">
-          <h1 class="brandname">Darts of Destruction</h1>
+          <h1 class="brandname">&nbsp;&nbsp; Darts of Destruction</h1>
       </div>
       </div>
     </div>
@@ -40,11 +40,11 @@
            </div>
            <div class="addToCartandIcons">
              <button type="button" name="button">Add To Cart</button>
-             <ul>
-               <i class="fa fa-snapchat" aria-hidden="true"></i>
-               <i class="fa fa-twitter" aria-hidden="true"></i>
-               <i class="fa fa-youtube-play" aria-hidden="true"></i>
-             </ul>
+             <div class="socialIcons">
+               <i class="fa fa-2x fa-snapchat" aria-hidden="true"></i>
+               <i class="fa fa-2x fa-twitter" aria-hidden="true"></i>
+               <i class="fa fa-2x fa-youtube-play" aria-hidden="true"></i>
+             </div>
            </div>
          </div>
        </div>
@@ -85,7 +85,10 @@
     </section>
 
     <section class="container-fluid">
-      <div class="row" class="map" id="canvas1">
+      <div class="container">
+        <h2>Developed in the Best Country</h2>
+      </div>
+      <div class="map row" id="canvas1">
         <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
       </div>
     </section>
