added 95% of companies code. not working though.

--- a/app/index.html
+++ b/app/index.html
@@ -66,18 +66,20 @@
     <section class="productOuter container-fluid">
       <div class="productInner container">
         <div class="row">
-
-          <div class="col-sm-3 text-center">
-            <img src="http://placehold.it/100x100">
-          </div>
-          <div class="col-sm-3 text-center">
-            <img src="http://placehold.it/100x100">
-          </div>
-          <div class="col-sm-3 text-center">
-            <img src="http://placehold.it/100x100">
-          </div>
-          <div class="col-sm-3 text-center">
-            <img src="http://placehold.it/100x100">
+          <div class="companies">
+            <div class="col-sm-3 text-center">
+              <!-- companies.js template goes here -->
+              <img src="http://placehold.it/100x100">
+            </div>
+            <div class="col-sm-3 text-center">
+              <img src="http://placehold.it/100x100">
+            </div>
+            <div class="col-sm-3 text-center">
+              <img src="http://placehold.it/100x100">
+            </div>
+            <div class="col-sm-3 text-center">
+              <img src="http://placehold.it/100x100">
+            </div>
           </div>
 
         </div>
