added some styling

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
              <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
              <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
+
            </ul>
            <div class="next">
              <a href="">&gt;</a>
@@ -40,15 +41,17 @@
            </div>
            <div class="addToCartandIcons">
              <button type="button" name="button">Add To Cart</button>
-             <ul>
+             <ul class="icons col-sm-8">
                <i class="fa fa-snapchat" aria-hidden="true"></i>
                <i class="fa fa-twitter" aria-hidden="true"></i>
                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+               <i class="fa fa-google-plus" aria-hidden="true"></i>
              </ul>
            </div>
          </div>
        </div>
     </section>
+    <!-- <hr> -->
 
     <section class="testimonialsOuter container-fluid">
       <div class="testimonialsInner container">
@@ -62,6 +65,7 @@
         </div>
       </div>
     </section>
+    <!-- <hr> -->
 
     <section class="productOuter container-fluid">
       <div class="productInner container">
