--- a/app/index.html
+++ b/app/index.html
@@ -38,12 +38,13 @@
            <div class="productDetails">
              <!-- product.js template goes here -->
            </div>
-           <div class="addToCartandIcons">
+           <div class="addToCartandIcons col-sm-8">
              <button type="button" name="button">Add To Cart</button>
              <div class="socialIcons">
                <i class="fa fa-2x fa-snapchat" aria-hidden="true"></i>
                <i class="fa fa-2x fa-twitter" aria-hidden="true"></i>
                <i class="fa fa-2x fa-youtube-play" aria-hidden="true"></i>
+               <i class="fa fa-google-plus" aria-hidden="true"></i>
              </div>
            </div>
          </div>
