--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,9 @@
            <div class="productDetails">
              <!-- product.js template goes here -->
            </div>
-           <div class="addToCartandIcons col-sm-8">
-             <button type="button" name="button">Add To Cart</button>
-             <ul class="icons col-sm-8">
+           <button type="button" name="button">Add To Cart</button>
+           <div class="socialIcons">
+             <ul>
                <i class="fa fa-snapchat" aria-hidden="true"></i>
                <i class="fa fa-twitter" aria-hidden="true"></i>
                <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -67,8 +67,8 @@
 
     <section class="productOuter container-fluid">
       <div class="productInner container">
-        <div class="row">
-          <div class="companies">
+        <div class="row companies text-center">
+          <h2>Companies Using Our Stuff</h2>
             <div class="col-sm-3 text-center">
               <!-- companies.js template goes here -->
               <img src="http://placehold.it/100x100">
@@ -82,8 +82,6 @@
             <div class="col-sm-3 text-center">
               <img src="http://placehold.it/100x100">
             </div>
-          </div>
-
         </div>
       </div>
     </section>
