--- a/app/index.html
+++ b/app/index.html
@@ -9,85 +9,103 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
+    <div id="page-wrap">
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img class="logo img-responsive" src="./images/darts-logo.png">
-          <h1 class="brandname">&nbsp;&nbsp; Darts of Destruction</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img class="logo img-responsive" src="./images/darts-logo.png">
+            <h1 class="brandname">&nbsp;&nbsp; Darts of Destruction</h1>
+        </div>
+        </div>
       </div>
-      </div>
+
+      <section class="container carouselCart">
+         <div class="row carousel-row">
+           <div id="carousel" class="col-sm-7">
+             <div class="prev">
+               <a href="">&lt;</a>
+             </div>
+             <ul>
+               <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
+               <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
+               <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
+
+             </ul>
+             <div class="next">
+               <a href="">&gt;</a>
+             </div>
+           </div>
+           <div class="shoppingCart col-sm-5">
+             <div class="productDetails">
+               <!-- product.js template goes here -->
+             </div>
+             <button type="button" name="button">Add To Cart</button>
+             <div class="socialIcons">
+               <ul>
+                 <i class="fa fa-snapchat" aria-hidden="true"></i>
+                 <i class="fa fa-twitter" aria-hidden="true"></i>
+                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                 <i class="fa fa-google-plus" aria-hidden="true"></i>
+               </ul>
+             </div>
+           </div>
+         </div>
+      </section>
+
+      <section class="testimonialsOuter container-fluid">
+        <div class="testimonialsInner container">
+          <div class="row text-center">
+            <h2>Testimonials</h2>
+          </div>
+          <div class="row testimonials-row">
+
+          </div>
+
+        </div>
+      </section>
+
+      <section class="productOuter container-fluid">
+        <div class="productInner container">
+          <div class="row companies text-center">
+            <h2>Companies Using Our Stuff</h2>
+            <!-- companies.js template goes here -->
+
+          </div>
+        </div>
+      </section>
+
+      <section class="container-fluid text-center">
+          <h2>Developed in the Best Country</h2>
+        <div class="map row" id="canvas1">
+          <iframe width="100%" height="200px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <footer class="container-fluid">
+        <div class="container text-center">
+          <div class="col-sm-6">
+            <p>
+              First you buy, they put a blidfold on, and throw the dart very very high... & wait!
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p>
+              Copyright 2016 Darts Of Destruction - All Rights Reserved
+            </p>
+          </div>
+        </div>
+
+      </footer>
+
     </div>
 
-    <section class="container carouselCart">
-       <div class="row carousel-row">
-         <div id="carousel" class="col-sm-7">
-           <div class="prev">
-             <a href="">&lt;</a>
-           </div>
-           <ul>
-             <li class="active"><img class="carousel-image img-responsive" src="./images/carousel-feild-night.jpeg"></li>
-             <li><img class="carousel-image img-responsive" src="./images/carousel-sports-ref.jpeg"></li>
-             <li><img class="carousel-image img-responsive" src="./images/carousel-sports-shoes.jpeg"></li>
-
-           </ul>
-           <div class="next">
-             <a href="">&gt;</a>
-           </div>
-         </div>
-         <div class="shoppingCart col-sm-5">
-           <div class="productDetails">
-             <!-- product.js template goes here -->
-           </div>
-           <button type="button" name="button">Add To Cart</button>
-           <div class="socialIcons">
-             <ul>
-               <i class="fa fa-snapchat" aria-hidden="true"></i>
-               <i class="fa fa-twitter" aria-hidden="true"></i>
-               <i class="fa fa-youtube-play" aria-hidden="true"></i>
-               <i class="fa fa-google-plus" aria-hidden="true"></i>
-             </ul>
-           </div>
-         </div>
-       </div>
-    </section>
-
-    <section class="testimonialsOuter container-fluid">
-      <div class="testimonialsInner container">
-        <div class="row text-center">
-          <h2>Testimonials</h2>
-        </div>
-        <div class="row testimonials-row">
-
-        </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="productOuter container-fluid">
-      <div class="productInner container">
-        <div class="row companies text-center">
-          <h2>Companies Using Our Stuff</h2>
-          <!-- companies.js template goes here -->
-          
-        </div>
-      </div>
-    </section>
-
-    <section class="container-fluid">
-      <div class="container">
-        <h2>Developed in the Best Country</h2>
-      </div>
-      <div class="map row" id="canvas1">
-        <iframe width="100%" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRYOIxncL9YgRQUZgwKGuRUM&key=AIzaSyDR7y-BfIBSx8iMOJgPIzUccJAhvB4UL1Q" allowfullscreen></iframe>
-      </div>
-    </section>
-    <footer>
+    <div id="modal">
       <p>
-        First you buy, they put a blidfold on, and throw the dart very very high... & wait!
+        hurry up and buy !
       </p>
-    </footer>
+      <button type="button" name="button">CLOSE</button>
+    </div>
 
 
     <script src="js/bundle.js"></script>
